[package]
name = "grrs"
version = "0.1.0"
authors = ["meinzer1899"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/meinzer1899/grrs"
repository = "https://github.com/meinzer1899/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[[bin]]
name = "grrs"
path = "src/main.rs"

[dependencies]
structopt = "0.3.25"
anyhow = "1.0.13"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"
